setup/nginx_ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://_WEB_APP_DOMAIN,http://localhost:4200"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  tls:
    - hosts:
      - _API_DOMAIN
      secretName: solutions-template # [TODO] Change this to anything
  rules:
  - host: _API_DOMAIN
    http:
      paths:
      - path: /sample_service
        backend:
          serviceName: sample-service
          servicePort: 8888
      - path: /authentication
        backend:
          serviceName: authentication
          servicePort: 8889
